# Qwen3-Omni-Explore

./: README.md  main.py  pyproject.toml  qwen2-5-omni-audio-function-call.ipynb  testing-qwen3-omni.ipynb
