[project]
name = "qwen3-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioread>=3.1.0",
    "av>=17.0.0",
    "librosa>=0.11.0",
    "packaging>=26.0",
    "requests>=2.33.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.4",
]
